--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		configuration file (xterm, aterm, eterm, rxvt, urxvt),
 		*.colorscheme (konsole, yakuake) and *.itermcolors
 		(iTerm2 for Mac)"/>
-		<link href="css/merged.css?modified=20120923" rel="stylesheet" />
+		<link href="css/merged.css" rel="stylesheet" />
 		<style id="outline-fix"></style>
 	</head>
 	<body onmousedown="document.getElementById('outline-fix').innerHTML='a{outline:none}';" onkeydown="document.getElementById('outline-fix').innerHTML=''">
