--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
 		<script>window.Backbone || document.write("<script src='lib/js/backbone-min.js'>\x3C/script>")</script>
 
-		<script src="js/compiled.js?modified=20120923"></script>
+		<script src="js/compiled.js"></script>
 
 		<script>_4bit();</script>
 
