--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 
 		<!-- JavaScript =========================================================================== -->
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+		<script src="js/jquery.min.js"></script>
 		<script>window.jQuery || document.write("<script src='lib/js/jquery-1.8.0.min.js'>\x3C/script>")</script>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
+		<script src="js/underscore-min.js"></script>
 		<script>window._ || document.write("<script src='lib/js/underscore-min.js'>\x3C/script>")</script>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
+		<script src="js/backbone-min.js"></script>
 		<script>window.Backbone || document.write("<script src='lib/js/backbone-min.js'>\x3C/script>")</script>
 
 		<script src="js/compiled.js"></script>
